dodałem funkcję obliczjącą wszystkie możliwe przstawienia zapałek
mam (kniej więcej) pomysł jak zrobić zadanie tak, aby czas potrzebny na odgadnięcie rozwiązania był O(1)