@@ -1,2 +1,3 @@
 dodałem funkcję obliczjącą wszystkie możliwe przstawienia zapałek
 mam (kniej więcej) pomysł jak zrobić zadanie tak, aby czas potrzebny na odgadnięcie rozwiązania był O(1)
+(update) dodałem komentarz w match-rearrangements.c i -|-.h
